<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="16dp"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <ProgressBar
            android:id="@+id/mutantPercentProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            tools:layout_editor_absoluteX="28dp"
            tools:layout_editor_absoluteY="77dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mutantsLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="start"
                android:text="@string/mutants"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/mutantPercentTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center" />

            <TextView
                android:id="@+id/humansLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="10"
                android:gravity="end"
                android:text="@string/humans"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mutantsCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="start"
                android:text="@string/value_placeholder"
                android:textAllCaps="true"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/humansCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="end"
                android:text="@string/value_placeholder"
                android:textAllCaps="true"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="10"
            android:gravity="bottom"
            android:orientation="vertical"
            android:padding="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <exam.luisgiusti.magnetocodebreaker.customViews.DnaTableLayout
                    android:id="@+id/dnaTable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="20"></exam.luisgiusti.magnetocodebreaker.customViews.DnaTableLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <ImageButton
                        android:id="@+id/increaseDnaSizeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/plus" />

                    <TextView
                        android:id="@+id/dnaSizeTextLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/matrix_size_label" />

                    <TextView
                        android:id="@+id/dnaSizeTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:text="@string/value_placeholder" />

                    <ImageButton
                        android:id="@+id/reduceDnaSizeButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/minus" />

                    <View
                        android:id="@+id/divider"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="20"
                        android:background="?android:attr/listDivider" />

                    <ImageButton
                        android:id="@+id/resetDnaButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:srcCompat="@drawable/reset" />
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/dnaAButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dna_value_a" />

                <Button
                    android:id="@+id/dnaCButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dna_value_c" />

                <Button
                    android:id="@+id/dnaGButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dna_value_g" />

                <Button
                    android:id="@+id/dnaTButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/dna_value_t" />

                <Button
                    android:id="@+id/dnaDeleteButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/back_arrow" />
            </LinearLayout>

        </LinearLayout>

        <Button
            android:id="@+id/testDnaButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/test_dna" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>